@@ -1,3 +1,8 @@
+2011-12-23  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/unitTests/runTests.R: unit tests output 'fallback' directory
+	changed to '..' and files are now in top-level of $pkg.Rcheck/
+
 2010-12-02  Douglas Bates  <bates@stat.wisc.edu>
 
 	* src/glmFamily.cpp, src/glmFamily.h: cache the Functions in the
